[package]
name = "repo_cleaner"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
git2 = "0.19.0"
git2_credentials = "0.14.0"
indicatif = "0.17.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tar = "0.4.43"
thiserror = "2.0.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
